[gd_scene load_steps=4 format=3 uid="uid://cfuiw0rtt54fn"]

[ext_resource type="Script" uid="uid://ym8vo86cfyyi" path="res://Scripts/UI/StreamUI/web_socket_config.gd" id="1_b1km8"]

[sub_resource type="Gradient" id="Gradient_257p7"]
offsets = PackedFloat32Array(0)
colors = PackedColorArray(0, 0, 0, 0)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_b1km8"]
gradient = SubResource("Gradient_257p7")
width = 1

[node name="WebSocketConfig" type="VBoxContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_b1km8")

[node name="Label" type="Label" parent="."]
layout_mode = 2
text = "Websocket"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Grid" type="GridContainer" parent="."]
layout_mode = 2
size_flags_vertical = 3
columns = 2

[node name="PortLabel" type="Label" parent="Grid"]
layout_mode = 2
size_flags_horizontal = 3
text = "Port : "

[node name="PortValue" type="SpinBox" parent="Grid"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/field_and_buttons_separation = -16
theme_override_icons/up_disabled = SubResource("GradientTexture1D_b1km8")
theme_override_icons/down = SubResource("GradientTexture1D_b1km8")
theme_override_icons/down_hover = SubResource("GradientTexture1D_b1km8")
theme_override_icons/down_pressed = SubResource("GradientTexture1D_b1km8")
theme_override_icons/down_disabled = SubResource("GradientTexture1D_b1km8")
theme_override_icons/up_pressed = SubResource("GradientTexture1D_b1km8")
theme_override_icons/up_hover = SubResource("GradientTexture1D_b1km8")
theme_override_icons/up = SubResource("GradientTexture1D_b1km8")
theme_override_icons/updown = SubResource("GradientTexture1D_b1km8")
max_value = 65535.0
value = 1234.0

[node name="StartButton" type="Button" parent="Grid"]
unique_name_in_owner = true
layout_mode = 2
focus_mode = 0
text = "Start"

[node name="StopButton" type="Button" parent="Grid"]
unique_name_in_owner = true
layout_mode = 2
focus_mode = 0
text = "Stop"

[connection signal="value_changed" from="Grid/PortValue" to="." method="_on_port_value_value_changed"]
[connection signal="pressed" from="Grid/StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="Grid/StopButton" to="." method="_on_stop_button_pressed"]
